# fastapi-ai-training

./: .gitignore
chatbot-rag-poc/: REBUILD_INSTRUCTIONS.md  docker-compose.yml
chatbot-rag-poc/backend/: Dockerfile  alembic.ini  fix_chat_messages.sql  fix_documents.sql  main.py  pyproject.toml
chatbot-rag-poc/backend/alembic/: env.py  script.py.mako
chatbot-rag-poc/backend/alembic/versions/: 001_initial.py
chatbot-rag-poc/backend/core/: config.py  database.py  dependencies.py  security.py  seed.py
chatbot-rag-poc/backend/models/: __init__.py  document.py  session.py  user.py
chatbot-rag-poc/backend/routers/: auth.py  chat.py
chatbot-rag-poc/backend/routers/admin/: documents.py  users.py
chatbot-rag-poc/backend/schemas/: auth.py  chat.py  document.py  user.py
chatbot-rag-poc/backend/services/: chat_session.py  ingest.py  rag.py
chatbot-rag-poc/frontend-admin/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
chatbot-rag-poc/frontend-admin/src/: App.jsx
chatbot-rag-poc/frontend-admin/src/api/: axios.js
chatbot-rag-poc/frontend-admin/src/components/: ConfirmModal.jsx  Layout.jsx  UploadZone.jsx  UserModal.jsx
chatbot-rag-poc/frontend-admin/src/pages/: Documents.jsx  Login.jsx  Users.jsx
chatbot-rag-poc/frontend-user/: index.html  package-lock.json  package.json
chatbot-rag-poc/frontend-user/src/: App.jsx
chatbot-rag-poc/frontend-user/src/components/: Layout.jsx  MessageBubble.jsx  SessionSidebar.jsx  SourceBadge.jsx
chatbot-rag-poc/frontend-user/src/context/: AuthContext.jsx
(+2 files in other folders)
